# autopenx

./: .coveragerc  .env.example  .gitignore  CLI操作手册.md  README.md  autopenx_bootstrap.cmd  autopnex.py  check_environment.py  ctf_knowledge.json  debug_benchmark.py  debug_single.py  image_utils.py  importlinter.ini  install_external_tools.py  pyproject.toml  pytest.ini  requirements.txt  run_ctf_solve.py  set_tools_path.cmd  test_target.py  一键启动Web界面.bat  一键安装依赖.bat  一键扫描.bat  一键清理.bat  使用说明.md  安装依赖.bat  安装外部工具.bat  检查环境依赖.bat  认证扫描操作文档.md
.github/workflows/: ci.yml
autopnex/: __init__.py  policy.py
autopnex/agents/: __init__.py  base.py  blackboard.py  browser_agent.py  coordinator.py  exploit_agent.py  recon_agent.py  report_agent.py  scan_agent.py  vuln_agent.py
autopnex/ctf/: __init__.py  action_runtime.py  agent_pool.py  analyzer.py  artifact_store.py  attack_chain_orchestrator.py  attribution.py  capability_registry.py  consensus.py  critic.py  diagnostics.py  discovery_broadcast.py  environment_probe.py  experience_writer.py  flag_engine.py  fuse_controller.py  hint_injector.py  ida_mcp_client.py  js_analyzer.py  knowledge_base.py  knowledge_learner.py  knowledge_schema.py  models.py  multi_agent.py  multi_attempt.py  offline_solver.py  parallel_route_scan.py  phase2_runner.py  phase2_tools.py  php_audit_engine.py  php_deser_framework.py  planner.py  preflight.py  prompt_compiler.py  prompts.py  prompts_enhanced.py  react_agent.py  recon_module.py  result_summarizer.py  route_cards.py  (+19 more)
autopnex/evasion/: __init__.py  evasion_middleware.py  payload_mutator.py  rate_controller.py  waf_detector.py
autopnex/knowledge_base/: __init__.py  cpe_matcher.py  cwe_mapping.py  dynamic_wordlist.py  poc_registry.py  vuln_patterns.py
autopnex/orchestrator/: __init__.py  llm_client.py  mock_brain.py  orchestrator.py  (+1 more)
config/: settings.py
docs/: ARCHITECTURE.md  CURRENT_STATUS.md  DEVELOPMENT.md  PPT汇报材料.md  autopenx-technical-implementation.md  ctf-react-agent-handoff.md  evasion_system_proposal.py  expert-review.md  multi-agent-consensus.md  汇报文档-AutoPenX技术全解.md  项目汇报文档.md
scripts/: _slim_dryrun.ps1  _slim_phase_a.ps1  blind_extract.py  package_windows.cmd  run_benchmark_baseline.py  setup_dvwa.py  verify_all.ps1  verify_interface_consistency.py
tests/: conftest.py  strategies.py  test_analyzer.py  test_attack_graph.py  test_chain_executor.py  test_chain_planner.py  test_ctf_crypto_tools.py  test_ctf_knowledge_base.py  test_ctf_models.py  test_ctf_pwn_tools.py  test_ctf_web_pipeline.py  test_ctf_web_tools.py  test_evasion.py  test_external_tools.py  test_findings.py  test_flag_engine.py  test_flag_engine_init.py  test_flag_engine_properties.py  test_http_scope.py  test_knowledge_base.py  test_multi_attempt.py  test_new_exploit_tools.py  test_orchestrator_contract.py  test_orchestrator_mock.py  test_planner.py  test_policy.py  test_regression.py  test_security_boundaries.py  test_state_machine.py  test_tool_registry.py  test_tools_sqli.py  test_web_api.py
(+276 files in other folders)
